--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "part2_a",
+  "name": "notes-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,7 @@
     "eject": "react-scripts eject",
     "server": "json-server --port 3002 --watch db.json"
   },
-  "proxy": "http://localhost:3002",
+  "proxy": "http://localhost:3002/",
   "eslintConfig": {
     "extends": [
       "react-app",
